<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.michal.asgchrono.MainActivity$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_button_text"
                android:id="@+id/button_clear" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_button_text"
                android:id="@+id/button_save"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/progressBar_monitor"
                android:progress="500"
                android:max="1000"
                android:indeterminate="false" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stretchColumns="0,1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/velocity_title"
                    android:id="@+id/textView_velocity_title"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_velocity"
                    android:layout_column="1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_velocity"
                    android:id="@+id/textView_velocity_unit"
                    android:layout_column="2" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/fire_rate_title"
                    android:id="@+id/textView_firerate_title"
                    android:layout_column="0"
                    android:textColor="#000000"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_firerate"
                    android:layout_column="1"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_firerate"
                    android:id="@+id/textView_firerate_unit"
                    android:layout_column="2" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Advanced statistics:"
            android:id="@+id/textView2" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:stretchColumns="1,2"
            android:showDividers="beginning|middle|end"
            android:visibility="visible"
            android:id="@+id/tableLayout_advancedView">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/min_velocity_title"
                    android:id="@+id/textView_min_velocity_title"
                    android:layout_column="1"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_min_velocity"
                    android:layout_column="2"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_velocity"
                    android:id="@+id/textView_min_velocity_unit"
                    android:layout_column="4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/max_velocity_title"
                    android:id="@+id/textView_max_velocity_title"
                    android:layout_column="1"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_max_velocity"
                    android:layout_column="2"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_velocity"
                    android:id="@+id/textView_max_velocity_unit"
                    android:layout_column="4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/std_velocity_title"
                    android:id="@+id/textView_std_velocity_title"
                    android:layout_column="1"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_std_velocity"
                    android:layout_column="2"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_velocity"
                    android:id="@+id/textView_std_velocity_unit"
                    android:layout_column="4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/min_fire_rate_title"
                    android:id="@+id/textView_min_firerate_title"
                    android:layout_column="1"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_min_firerate"
                    android:layout_column="2"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_firerate"
                    android:id="@+id/textView_min_firerate_unit"
                    android:layout_column="4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/max_fire_rate_title"
                    android:id="@+id/textView_max_firerate_title"
                    android:layout_column="1"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_max_firerate"
                    android:layout_column="2"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_firerate"
                    android:id="@+id/textView_max_firerate_unit"
                    android:layout_column="4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/bullet_energy_title"
                    android:id="@+id/textView_energy_title"
                    android:layout_column="1"
                    android:textColor="#000000"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_energy"
                    android:layout_column="2"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_energy"
                    android:id="@+id/textView_energy_unit"
                    android:layout_column="4" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/bullet_power_title"
                    android:id="@+id/textView_power_title"
                    android:layout_column="1"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/not_analyzed_text"
                    android:id="@+id/textView_power"
                    android:layout_column="2"
                    android:textColor="#000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/unit_power"
                    android:id="@+id/textView_power_unit"
                    android:layout_column="4" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Samples history:"
            android:id="@+id/textView" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listView_sampleHistory"
            android:choiceMode="singleChoice"
            android:divider="#000000"
            android:contextClickable="false"
            android:drawSelectorOnTop="true" />

    </LinearLayout>

</RelativeLayout>
